# djvulibre

./: .cvsignore  .gitignore  COPYRIGHT  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-BUILDING  README_macosx  README_packagers  README_qt4  README_win32  TODO  aclocal.m4  autogen.sh  configure  configure.ac  djvulibre.spec  djvulibre_3.5.12.orig.tar.gz.delta  djvulibre_3.5.12.orig.tar.gz.id  djvulibre_3.5.13.orig.tar.gz.delta  djvulibre_3.5.13.orig.tar.gz.id  djvulibre_3.5.13.pre14.orig.tar.gz.delta  djvulibre_3.5.13.pre14.orig.tar.gz.id  djvulibre_3.5.14.orig.tar.gz.delta  djvulibre_3.5.14.orig.tar.gz.id  djvulibre_3.5.17.orig.tar.gz.delta  djvulibre_3.5.17.orig.tar.gz.id  djvulibre_3.5.19.orig.tar.gz.delta  djvulibre_3.5.19.orig.tar.gz.id  djvulibre_3.5.20.orig.tar.gz.delta  djvulibre_3.5.20.orig.tar.gz.id  djvulibre_3.5.21.orig.tar.gz.delta  djvulibre_3.5.21.orig.tar.gz.id  djvulibre_3.5.22.orig.tar.gz.delta  djvulibre_3.5.23.orig.tar.gz.delta  djvulibre_3.5.23.orig.tar.gz.id  djvulibre_3.5.24.orig.tar.gz.delta  djvulibre_3.5.24.orig.tar.gz.id  (+25 more)
config/: .cvsignore  acinclude.m4  config.h.in  install-sh  makefixdep  makegen
debian/: .cvsignore  .gitignore  NOTES  README.Debian  TODO  changelog  control  copyright  djview.files  djview.menu  djview.mime  djview.postinst  djview.postrm  djview.prerm  djview3.install  djview3.menu  djview3.postinst  djview3.postrm  djview3.prerm  djvulibre-bin.install  djvulibre-desktop.files  djvulibre-desktop.install  djvulibre-djview3.xpm  djvulibre-plugin.files  djvulibre-plugin.install  djvuserve.files  djvuserve.install  djvuserve.sh  libdjvulibre-dev.docs  libdjvulibre-dev.install  libdjvulibre-text.files  libdjvulibre1.files  libdjvulibre15.files  libdjvulibre15.postinst  libdjvulibre15.prerm  libdjvulibre21.files  libdjvulibre21.install  rules  shlibs.local  watch
debian/patches/: 0001-djvulibre-fedora-Patch0-djvulibre-3.5.22-cdefs.patch.patch  0002-djvulibre-fedora-Patch6-djvulibre-3.5.27-export-file.patch  0003-djvulibre-fedora-Patch8-djvulibre-3.5.27-check-image.patch  0004-djvulibre-fedora-Patch9-djvulibre-3.5.27-interger-ov.patch  0005-djvulibre-fedora-Patch10-djvulibre-3.5.27-check-inpu.patch  0006-djvulibre-fedora-Patch11-djvulibre-3.5.27-djvuport-s.patch  0007-djvulibre-fedora-Patch12-djvulibre-3.5.27-unsigned-s.patch  0008-Fix-potential-buffer-overflow-in-MMRDecoder.patch  CVE-2019-15142.patch  CVE-2019-15143.patch  CVE-2019-15144.patch  CVE-2019-15145.patch  CVE-2019-18804.patch  CVE-2021-3500,32490,32491,32492,32493.patch  series
debian/source/: include-binaries
debian/upstream/: metadata
desktopfiles/: .cvsignore  Makefile.am  Makefile.in  README  djvulibre-djview3.desktop  djvulibre-mime.xml  hi-djview3.svgz  hi-djvu.svgz  register-djview-menu.in  register-djvu-mime.in  vnd.djvu.desktop
doc/: DjVmNav.h  GMapAreas.cpp  djvu2spec.djvu  djvu3changes.txt  djvu3spec.djvu  djvuchanges.txt  lizard2002.djvu  lizard2003-navm.djvu  srclink
doc/minilisp/: .cvsignore  Makefile  README  makefile  minilisp.cpp  minilisp.in
doc/old/: djvu3changes.txt
etc/: DjVmNav-TreeSequence.djvu  DjVmNav.README  DjVmNav.cpp  GMapAreas.README  GMapAreas.h  PATCH.libgcc  README.libgcc  makefixdep  makegen  srclink
etc/desktop/: djvu.keys
gsfiles/: Makefile.in  README  contrib.mak.add  djvudigital  djvudigital.1  gsdjvu  gsdjvu.spec  gsdjvu_configure.sh  gsdjvu_install.sh  ps2utf8.ps
gui/: Makefile.in  makegen
gui/bin2cpp/: .cvsignore  Makefile.dep  Makefile.in  README.txt  bin2cpp.cpp
gui/desktop/: .cvsignore  Makefile.in  acdesktop.m4  djview.desktop  djvu.applications  djvu.keys  djvu.mime  djvu.xpm  installer.sh  x-djvu.desktop
gui/djview/: .cvsignore  Makefile.add  Makefile.dep  Makefile.in  README.txt  dispatch.cpp  dispatch.h  djview.1  djvu_viewer.cpp  djvu_viewer.h  djvu_viewer_res.h  main.cpp  mime_check.cpp  mime_check.h  netscape.cpp  netscape.h  qd_about_dialog.cpp  qd_about_dialog.h  qd_mime_dialog.cpp  qd_mime_dialog.h  qd_viewer.cpp  qd_viewer.h  qd_viewer_menu.cpp  qd_viewer_menu.h  qd_viewer_prefs.cpp  qd_viewer_prefs.h  qd_viewer_shell.cpp  qd_viewer_shell.h
gui/indep/: README.txt
gui/npsdk/: COPYING  README.txt  jri.h  jri_md.h  jritypes.h  npapi.h  npmac.cpp  npunix.c  npunix.cpp  npupp.h  npwin.cpp  prcpucfg.h
gui/nsdejavu/: .cvsignore  COPYING  Makefile.add  Makefile.dep  Makefile.in  README.txt  nsdejavu.1.in  nsdejavu.c  path.cpp  path.h  plugin.cpp  plugin.h  stubs.cpp
i18n/: Makefile.in  README
i18n/cs/: .cvsignore  Makefile.in  djview.ts  qt.ts
libdjvu/: .cvsignore  Arrays.cpp  Arrays.h  BSByteStream.cpp  BSByteStream.h  BSEncodeByteStream.cpp  ByteStream.cpp  ByteStream.h  DataPool.cpp  DataPool.h  DjVmDir.cpp  DjVmDir.h  DjVmDir0.cpp  DjVmDir0.h  DjVmDoc.cpp  DjVmDoc.h  DjVmNav.cpp  DjVmNav.h  DjVuAnno.cpp  DjVuAnno.h  DjVuDocEditor.cpp  DjVuDocEditor.h  DjVuDocument.cpp  DjVuDocument.h  DjVuDumpHelper.cpp  DjVuDumpHelper.h  DjVuDynamic.cpp  DjVuDynamic.h  DjVuErrorList.cpp  DjVuErrorList.h  DjVuFile.cpp  DjVuFile.h  DjVuFileCache.cpp  DjVuFileCache.h  DjVuGlobal.cpp  DjVuGlobal.h  DjVuGlobalMemory.cpp  DjVuImage.cpp  DjVuImage.h  DjVuInfo.cpp  (+81 more)
mac/: README
macosx/: README
share/: Makefile.am
tools/: .cvsignore  Makefile.am  Makefile.dep  Makefile.in  any2djvu  any2djvu.1  any2djvu.sh  bzz.1  bzz.cpp  bzz.dsp  c44.1  c44.cpp  c44.dsp  cjb2.1  cjb2.cpp  cjb2.dsp  common.h  cpaldjvu.1  cpaldjvu.cpp  cpaldjvu.dsp  csepdjvu.1  csepdjvu.cpp  csepdjvu.dsp  ddjvu.1  ddjvu.cpp  ddjvu.dsp  djvm.1  djvm.cpp  djvm.dsp  djvmcvt.1  djvmcvt.cpp  djvmcvt.dsp  djvu.1  djvudigital  djvudigital.1  djvudump.1  djvudump.cpp  djvudump.dsp  djvuextract.1  djvuextract.cpp  (+28 more)
tools/jb2cmp/: Makefile.dep  Makefile.in  classify.cpp  classify.h  cuts.cpp  frames.cpp  minidjvu.h  patterns.cpp  patterns.h
xmltools/: .cvsignore  Makefile.am  Makefile.dep  Makefile.in  djvutoxml.1  djvutoxml.cpp  djvutoxml.dsp  djvuxml-s.3  djvuxml.1.in  djvuxmlparser.1  djvuxmlparser.cpp  djvuxmlparser.dsp  xml2native.1  xml2native.cpp  xml2utf16.1  xml2utf16.cpp  xml2utf8.1  xml2utf8.cpp  xmltools.dsw
(+312 files in other folders)
